# hypothesis-testing-tool

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: run-tests.yml
.github/workflows/: run-tests.yml
description/: README.md  create_readme.ipynb  description.ipynb  description.md
hypothesis_testing_tool/: one_sample_statistics.py
hypothesis_testing_tool/compute_stats/: one_sample_statistics.py  two_sample_statistics.py
hypothesis_testing_tool/presentation/: create_plots.py
tests/: create_plots_test.py  one_sample_statistics_test.py  run_all_tests.py  two_sample_statistics_test.py
