[tool.poetry]
name = "hypothesis-testing-tool"
version = "0.1.0"
description = "A tool for doing hypothesis testing"
authors = ["Alexandros Vamvakaris-Skrivanos <vamvas@outlook.com.gr>"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.readme]
file = "description/README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.14.0"
matplotlib = "^3.9.1"

[tool.poetry.group.tests.dependencies]
black = "^24.4.2"
mypy = "^1.11.0"
pytest = "^8.3.1"

[tool.poetry.group.precommithooks.dependencies]
pre-commit = "^3.7.1"

[tool.black]
line-length = 150

[tool.mypy]
ignore_missing_imports = true
